# saki-controlplane/internal/gen/openapi/oas_response_encoders_gen.go
@@ -26,6 +26,20 @@ func encodeAbortImportUploadSessionResponse(response *ImportUploadAbortResponse,
 	return nil
 }
 
+func encodeCancelAssetUploadResponse(response *AssetUploadCancelResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeCancelRuntimeTaskResponse(response *RuntimeCommandResponse, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(202)
